fix: Add overflow-warp to reset css

--- a/docs/_sass/utils/reset.scss
+++ b/docs/_sass/utils/reset.scss
@@ -8,6 +8,7 @@
 
 body {
   background-color: $color-base-4;
+  overflow-wrap: break-word;
 }
 
 a {
